// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkBadge should render correctly 1`] = `
<span
  className="bpk-badge "
>
  Promociando
</span>
`;

exports[`BpkBadge should render correctly with a "centered" 1`] = `
<span
  className="bpk-badge  bpk-badge--centered"
>
  Promociando
</span>
`;

exports[`BpkBadge should render correctly with a "docked" attribute value equal to "left" 1`] = `
<span
  className="bpk-badge  bpk-badge--docked-left"
>
  Promociando
</span>
`;

exports[`BpkBadge should render correctly with a "docked" attribute value equal to "right" 1`] = `
<span
  className="bpk-badge  bpk-badge--docked-right"
>
  Promociando
</span>
`;

exports[`BpkBadge should render correctly with an icon 1`] = `
<span
  className="bpk-badge "
>
  <svg
    height="18"
    style={
      Object {
        "height": "1.125rem",
        "width": "1.125rem",
      }
    }
    viewBox="0 0 24 24"
    width="18"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M3.455 8.78a.775.775 0 0 1 .952.224l1.472 1.91 1.816-.267a2.852 2.852 0 0 1 .536-.051h9.862a5.099 5.099 0 0 1 2.438.62.944.944 0 0 1-.072 1.67l-.046.021a5.1 5.1 0 0 1-2.194.497h-4.314l-3.663 5.867A1.546 1.546 0 0 1 8.93 20H7.78l2.007-5.858v-.738h-1.53a2.865 2.865 0 0 1-.589-.062l-1.765-.288-1.509 1.958a.775.775 0 0 1-.929.237.786.786 0 0 1-.419-.984L3.862 12 3.06 9.749a.785.785 0 0 1 .395-.97zM8.929 4a1.545 1.545 0 0 1 1.312.729l3.19 4.985H9.749L7.778 4z"
    />
  </svg>
  Promociando
</span>
`;

exports[`BpkBadge should render correctly with type="destructive" 1`] = `
<span
  className="bpk-badge bpk-badge--destructive"
>
  Promociando
</span>
`;

exports[`BpkBadge should render correctly with type="inverse" 1`] = `
<span
  className="bpk-badge bpk-badge--inverse"
>
  Promociando
</span>
`;

exports[`BpkBadge should render correctly with type="light" 1`] = `
<span
  className="bpk-badge bpk-badge--light"
>
  Promociando
</span>
`;

exports[`BpkBadge should render correctly with type="outline" 1`] = `
<span
  className="bpk-badge bpk-badge--outline"
>
  Promociando
</span>
`;

exports[`BpkBadge should render correctly with type="success" 1`] = `
<span
  className="bpk-badge bpk-badge--success"
>
  Promociando
</span>
`;

exports[`BpkBadge should render correctly with type="warning" 1`] = `
<span
  className="bpk-badge "
>
  Promociando
</span>
`;
